Pull request #836: AG-54572 custom filter modal fix
Merge in SCITER/adguard-mini from AG-54572-custom-filter-modal-fix to master

Squashed commit of the following:

commit ee823553bab8c1c88afc96e9649fdb1bcb8015bc
Merge: 84f35fa2 3c5d6716
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Wed Jun 10 15:16:06 2026 +0300

    Merge branch 'master' into AG-54572-custom-filter-modal-fix

commit 84f35fa21a3131946980935022db524cab452d0d
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Tue Jun 2 10:38:31 2026 +0300

    wip

--- a/AdguardMini/sciter-ui/modules/settings/components/Filters/components/AddCustomFilterModal/AddCustomFilterModal.module.pcss
+++ b/AdguardMini/sciter-ui/modules/settings/components/Filters/components/AddCustomFilterModal/AddCustomFilterModal.module.pcss
@@ -17,12 +17,12 @@
         text-align: left;
         padding-top: var(--m-xxs);
         padding-bottom: var(--m-m);
-        width: 328px;
+        width: 408px;
 
         &_desk {
             color: var(--text-main-text-main-default);
             display: inline;
-            width: 328px;
+            width: 408px;
             text-wrap: wrap;
         }
     }
@@ -30,13 +30,13 @@
     &_input {
         text-align: left;
         margin: var(--m-s) 0;
-        width: 328px;
+        width: 408px;
     }
 
 
     &_button {
         margin-bottom: var(--m-s);
-        width: 328px;
+        width: 408px;
 
         &:last-of-type {
             margin: 0;
